--- a/mlmaternalmortality/index.html
+++ b/mlmaternalmortality/index.html
@@ -142,7 +142,7 @@
                         }
                     </script>
                     <button
-                        onclick="document.getElementById('prediction').innerHTML = 'Predicting. Please wait.'; predict();">predict</button>
+                        onclick="document.getElementById('prediction').innerHTML = 'Thinking...'; predict();">predict</button>
                 </ol>
                 <p>Patient Risk Prediction: <b style="color:#1DD3B0" id="prediction">Initializing AI. May take up to 30
                         seconds. Please wait.</b>
