--- a/mlvmaudit/index.html
+++ b/mlvmaudit/index.html
@@ -66,7 +66,7 @@
                     <li><input id="feature1" type="month" value="2023-01" min="2023-01" max="2023-04">
                     </li>
                     <button
-                        onclick="document.getElementById('prediction').innerHTML = 'Predicting. Please wait.'; predict();">predict</button>
+                        onclick="document.getElementById('prediction').innerHTML = 'Thinking...'; predict();">predict</button>
                 </ol>
                 <p>Monthly Cloud Usage Prediction: <b style="color:#8ECAE6" id="prediction">Initializing AI. May take up
                         to 30 seconds. Please wait.</b></p>
