--- a/mlcoffeeplantdiseases/index.html
+++ b/mlcoffeeplantdiseases/index.html
@@ -81,7 +81,7 @@
                         }
                     </script>
                     <button
-                        onclick="document.getElementById('prediction').innerHTML = 'Predicting. Please wait.'; predict();">predict</button>
+                        onclick="document.getElementById('prediction').innerHTML = 'Thinking...'; predict();">predict</button>
                 </ol>
                 <p>Prediction: <b style="color:#DDB892" id="prediction">Initializing AI. May take up to 30 seconds.
                         Please wait.</b></p>
