--- a/mlcovid/index.html
+++ b/mlcovid/index.html
@@ -98,7 +98,7 @@
                         }
                     </script>
                     <button
-                        onclick="document.getElementById('prediction').innerHTML = 'Predicting. Please wait.'; predict();">predict</button>
+                        onclick="document.getElementById('prediction').innerHTML = 'Thinking...'; predict();">predict</button>
                 </ol>
                 <p>Radiology Report: <b style="color:#AA5EFF" id="prediction">Initializing AI. May take up to 30
                         seconds. Please wait.</b></p>
