--- a/mlsupplychain/index.html
+++ b/mlsupplychain/index.html
@@ -162,7 +162,7 @@
                         }
                     </script>
                     <button
-                        onclick="document.getElementById('prediction').innerHTML = 'Predicting. Please wait.'; predict();">predict</button>
+                        onclick="document.getElementById('prediction').innerHTML = 'Thinking...'; predict();">predict</button>
                 </ol>
                 <p>Stock Delivery Prediction: <b style="color:#8ECAE6" id="prediction">Initializing AI. May take up to
                         30 seconds. Please wait.</b>
