--- a/mltelecom/index.html
+++ b/mltelecom/index.html
@@ -113,7 +113,7 @@
                         }
                     </script>
                     <button
-                        onclick="document.getElementById('prediction').innerHTML = 'Predicting. Please wait.'; predict();">predict</button>
+                        onclick="document.getElementById('prediction').innerHTML = 'Thinking...'; predict();">predict</button>
                 </ol>
                 <p>Monthly Plan Revenue Prediction: <b style="color:#FFB703" id="prediction">Initializing AI. May take
                         up to 30 seconds. Please wait.</b></p>
