--- a/mlcovid/index.html
+++ b/mlcovid/index.html
@@ -69,8 +69,7 @@
                     abnormalities on chest CT images, with most having bilateral involvement. ICU patients typically
                     have bilateral lobular and subsegmental areas of consolidation on admission, while non-ICU patients
                     have bilateral ground-glass opacity and subsegmental areas of consolidation. Later CT images of
-                    non-ICU patients display bilateral ground-glass opacity with resolved consolidation. COVID-19 is
-                    possibly better diagnosed using radiological imaging.
+                    non-ICU patients display bilateral ground-glass opacity with resolved consolidation.
                 </p>
             </section>
             <section>
