--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 <p>
                     <a
                         href="https://github.com/lyoh001/AzureStaticWebApps/blob/main/mlcloudaudit/notebook/notebook.ipynb"><b>View
-                            Code</b></a>, <a href="https://lyoh001.com/mlvmaudit"><b>View Demo</b></a>
+                            Code</b></a>, <a href="https://www.lyoh001.com/mlvmaudit"><b>View Demo</b></a>
                 </p>
                 <p><img src="images/lstm.png" width="800" height="300"></p>
             </section>
@@ -83,7 +83,7 @@
                 <p>
                     <a
                         href="https://github.com/lyoh001/AzureStaticWebApps/blob/main/mlmaternalmortality/notebook/notebook.ipynb"><b>View
-                            Code</b></a>, <a href="https://lyoh001.com/mlmaternalmortality"><b>View Demo</b></a>
+                            Code</b></a>, <a href="https://www.lyoh001.com/mlmaternalmortality"><b>View Demo</b></a>
                 </p>
             </section>
             <section>
@@ -102,7 +102,7 @@
                 <p>
                     <a
                         href="https://github.com/lyoh001/AzureStaticWebApps/blob/main/mlcoffeeplantdiseases/notebook/notebook.ipynb"><b>View
-                            Code</b></a>, <a href="https://lyoh001.com/mlcoffeeplantdiseases"><b>View Demo</b></a>
+                            Code</b></a>, <a href="https://www.lyoh001.com/mlcoffeeplantdiseases"><b>View Demo</b></a>
                 </p>
                 <p><img src="images/cnn.png" width="800" height="300"></p>
             </section>
@@ -130,7 +130,7 @@
                 </p>
                 <p>
                     <a href="https://github.com/lyoh001/AzureStaticWebApps/blob/main/mltelecom/notebook/notebook.ipynb"><b>View
-                            Code</b></a>, <a href="https://lyoh001.com/mltelecom"><b>View Demo</b></a>
+                            Code</b></a>, <a href="https://www.lyoh001.com/mltelecom"><b>View Demo</b></a>
                 </p>
                 <p><img src="images/ann.png" width="800" height="300"></p>
                 <p><img src="images/ann_error.png" width="800" height="300"></p>
@@ -183,7 +183,7 @@
         <ul class="social">
             <li><a href="https://github.com/lyoh001"><i class="fab fa-github"></i></a></li>
             <li><a href="https://linkedin.com/in/lyoh001"><i class="fab fa-linkedin"></i></a></li>
-            <li><a href="https://lyoh001.com"><i class="fa fa-home"></i></a></li>
+            <li><a href="https://www.lyoh001.com"><i class="fa fa-home"></i></a></li>
             <li><a href="mailto:lyoh001@gmail.com"><i class="fa fa-envelope"></i></a></li>
         </ul>
     </footer>
