--- a/mlsupplychain/index.html
+++ b/mlsupplychain/index.html
@@ -182,8 +182,8 @@
                     <button
                         onclick="document.getElementById('prediction').innerHTML = 'Thinking...'; predict();">predict</button>
                 </ol>
-                <p>Stock Delivery Prediction: <b style="color:#8ECAE6" id="prediction">Initializing AI. May take up to
-                        30 seconds. Please wait.</b>
+                <p>Stock Delivery Prediction: <b style="color:#8ECAE6" id="prediction">Initializing AI. May take up to 5
+                        seconds. Please wait.</b>
                 </p>
                 <script>
                     function predict() {
