--- a/mlvmaudit/index.html
+++ b/mlvmaudit/index.html
@@ -91,7 +91,7 @@
                         onclick="document.getElementById('prediction').innerHTML = 'Thinking...'; predict();">predict</button>
                 </ol>
                 <p>Monthly Cloud Usage Prediction: <b style="color:#8ECAE6" id="prediction">Initializing AI. May take up
-                        to 30 seconds. Please wait.</b></p>
+                        to 5econds. Please wait.</b></p>
                 <script>
                     function predict() {
                         var feature1 = document.getElementById("feature1").value;
