--- a/index.html
+++ b/index.html
@@ -133,6 +133,7 @@
                             Code</b></a>, <a href="https://www.lyoh001.com/mltelecom"><b>View Demo</b></a>
                 </p>
                 <p><img src="images/ann.png" width="800" height="300"></p>
+                <p><img src="images/swa.png" width="800" height="400"></p>
             </section>
             <section>
                 <h3><b>Cloud Security Dashboard</b></h3>
