--- a/index.html
+++ b/index.html
@@ -157,12 +157,12 @@
                 </p>
             </section>
             <section>
-                <h3><b>An Analysis of Azure Monthly Billing and Strategies for Savings</b></h3>
+                <h3><b>An Analysis of Azure IaaS for Savings</b></h3>
                 <p>
-                    Designed and developed a monthly Azure billing automation that extracted and analyzed data from a
-                    REST API and performed data manipulation and data visualization using Python, Pandas, Seaborn, and
-                    Azure Functions (Serverless). The solution resulted in significant cost savings, improved customer
-                    satisfaction, reduced manual efforts and provided valuable insights.
+                    Designed and developed a daily Azure VM audit automation that extracts data from various sources,
+                    including SQL and REST API. The solution also performs data transformation using Azure Data Factory,
+                    Azure Databricks, Azure Data Lake, and Azure Functions (Serverless). This implementation resulted in
+                    significant insights for OS licensing, reduced manual efforts, and provided valuable insights.
                 </p>
                 <p>
                     <a href="#"><img src="https://img.shields.io/badge/python-black?logo=python" alt="" /></a>
@@ -172,7 +172,7 @@
                     <a href="#"><img src="https://img.shields.io/badge/azure-black?logo=microsoftazure" alt="" /></a>
                 </p>
                 <p>
-                    <a href="https://github.com/lyoh001/AzureBill"><b>View Code</b></a>
+                    <a href="https://github.com/lyoh001/AzureVMAudit"><b>View Code</b></a>
                 </p>
                 <p><img src="images/azure.png" width="800" height="686"></p>
             </section>
