--- a/index.html
+++ b/index.html
@@ -159,10 +159,10 @@
             <section>
                 <h3><b>An Analysis of Azure IaaS for Savings</b></h3>
                 <p>
-                    Designed and developed a daily Azure VM audit automation that extracts data from various sources,
+                    Designed and developed Azure ETL data pipeline that extracts data daily from various sources,
                     including SQL and REST API. The solution also performs data transformation using Azure Data Factory,
-                    Azure Databricks, Azure Data Lake, and Azure Functions (Serverless). This implementation resulted in
-                    significant insights for OS licensing, reduced manual efforts, and provided valuable insights.
+                    Azure Databricks and Azure Data Lake. This implementation resulted in significant efficiency for OS
+                    licensing, reduced manual efforts, and provided valuable insights.
                 </p>
                 <p>
                     <a href="#"><img src="https://img.shields.io/badge/python-black?logo=python" alt="" /></a>
