--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <main>
         <article id="mainRight">
             <section>
-                <h3><b>NLP for Hate Speech Detection</b></h3>
+                <h3><b>NLP: A Hate Speech Detection</b></h3>
                 <p>
                     Developed a hate speech detection system using NLP, which involved preprocessing using Regex, NLTK,
                     Gensim, and SpaCy. The data was aggregated and visualized using Pandas, Matplotlib, and Word Cloud
@@ -136,7 +136,7 @@
                 <p><img src="images/swa.png" width="800" height="220"></p>
             </section>
             <section>
-                <h3><b>Cloud Security Dashboard</b></h3>
+                <h3><b>Power BI: Cloud Security Dashboard</b></h3>
                 <p>
                     Implemented a new Power BI dashboard to help identify and track cloud security vulnerabilities.
                     The data was collected via a REST API, and the dashboard was embedded into Azure Web Apps and
@@ -157,7 +157,7 @@
                 </p>
             </section>
             <section>
-                <h3><b>An Analysis of Azure IaaS for Savings</b></h3>
+                <h3><b>ETL: An Analysis of Azure IaaS for Savings</b></h3>
                 <p>
                     Designed and developed Azure ETL data pipeline that extracts data daily from various sources,
                     including SQL and REST API. The solution also performs data transformation using Azure Data Factory,
