--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
                     <a href="#"><img src="https://img.shields.io/badge/sklearn-black?logo=scikit-learn" alt="" /></a>
                     <a href="#"><img src="https://img.shields.io/badge/pandas-black?logo=pandas" alt="" /></a>
                     <a href="#"><img src="https://img.shields.io/badge/numpy-black?logo=numpy" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/azure-black?logo=microsoftazure" alt="" /></a>
                     <a href="#"><img src="https://img.shields.io/badge/powerbi-black?logo=powerbi" alt="" /></a>
                 </p>
                 <p>
@@ -127,6 +128,8 @@
                     <a href="#"><img src="https://img.shields.io/badge/sklearn-black?logo=scikit-learn" alt="" /></a>
                     <a href="#"><img src="https://img.shields.io/badge/pandas-black?logo=pandas" alt="" /></a>
                     <a href="#"><img src="https://img.shields.io/badge/numpy-black?logo=numpy" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/azure-black?logo=microsoftazure" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/powerbi-black?logo=powerbi" alt="" /></a>
                 </p>
                 <p>
                     <a
