--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
                     model was fine-tuned using LSTM, Bidirectional LSTM, and BERT.
                 </p>
                 <p>
-                    <a href="#"><img src="https://img.shields.io/badge/python-black?logo=python" alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/jupyter-black?logo=jupyter" alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/tensorflow-black?logo=tensorflow" alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/sklearn-black?logo=scikit-learn" alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/spacy-black?logo=spacy" alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/twitter-black?logo=twitter" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/python-22212B?logo=python" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/jupyter-22212B?logo=jupyter" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/tensorflow-22212B?logo=tensorflow" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/sklearn-22212B?logo=scikit-learn" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/spacy-22212B?logo=spacy" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/twitter-22212B?logo=twitter" alt="" /></a>
                 </p>
                 <p>
                     <a
@@ -47,14 +47,14 @@
                     savings of over $500k per year.
                 </p>
                 <p>
-                    <a href="#"><img src="https://img.shields.io/badge/python-black?logo=python" alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/jupyter-black?logo=jupyter" alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/tensorflow-black?logo=tensorflow" alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/sklearn-black?logo=scikit-learn" alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/pandas-black?logo=pandas" alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/numpy-black?logo=numpy" alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/azure-black?logo=microsoftazure" alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/powerbi-black?logo=powerbi" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/python-22212B?logo=python" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/jupyter-22212B?logo=jupyter" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/tensorflow-22212B?logo=tensorflow" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/sklearn-22212B?logo=scikit-learn" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/pandas-22212B?logo=pandas" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/numpy-22212B?logo=numpy" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/azure-22212B?logo=microsoftazure" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/powerbi-22212B?logo=powerbi" alt="" /></a>
                 </p>
                 <p>
                     <a
@@ -70,11 +70,11 @@
                     pathogens using a Convolutional Neural Network using TensorFlow and OpenCV.
                 </p>
                 <p>
-                    <a href="#"><img src="https://img.shields.io/badge/python-black?logo=python" alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/jupyter-black?logo=jupyter" alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/tensorflow-black?logo=tensorflow" alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/numpy-black?logo=numpy" alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/opencv-black?logo=opencv" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/python-22212B?logo=python" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/jupyter-22212B?logo=jupyter" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/tensorflow-22212B?logo=tensorflow" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/numpy-22212B?logo=numpy" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/opencv-22212B?logo=opencv" alt="" /></a>
                 </p>
                 <p>
                     <a
@@ -97,14 +97,14 @@
                     performance.
                 </p>
                 <p>
-                    <a href="#"><img src="https://img.shields.io/badge/python-black?logo=python" alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/jupyter-black?logo=jupyter" alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/tensorflow-black?logo=tensorflow" alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/sklearn-black?logo=scikit-learn" alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/pandas-black?logo=pandas" alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/numpy-black?logo=numpy" alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/azure-black?logo=microsoftazure" alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/powerbi-black?logo=powerbi" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/python-22212B?logo=python" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/jupyter-22212B?logo=jupyter" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/tensorflow-22212B?logo=tensorflow" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/sklearn-22212B?logo=scikit-learn" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/pandas-22212B?logo=pandas" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/numpy-22212B?logo=numpy" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/azure-22212B?logo=microsoftazure" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/powerbi-22212B?logo=powerbi" alt="" /></a>
                 </p>
                 <p>
                     <a href="https://github.com/lyoh001/AzureStaticWebApps/blob/main/mltelecom/notebook/notebook.ipynb"><b>View
@@ -122,14 +122,14 @@
                     for both the mother and baby.
                 </p>
                 <p>
-                    <a href="#"><img src="https://img.shields.io/badge/python-black?logo=python" alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/jupyter-black?logo=jupyter" alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/tensorflow-black?logo=tensorflow" alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/sklearn-black?logo=scikit-learn" alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/pandas-black?logo=pandas" alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/numpy-black?logo=numpy" alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/azure-black?logo=microsoftazure" alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/powerbi-black?logo=powerbi" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/python-22212B?logo=python" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/jupyter-22212B?logo=jupyter" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/tensorflow-22212B?logo=tensorflow" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/sklearn-22212B?logo=scikit-learn" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/pandas-22212B?logo=pandas" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/numpy-22212B?logo=numpy" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/azure-22212B?logo=microsoftazure" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/powerbi-22212B?logo=powerbi" alt="" /></a>
                 </p>
                 <p>
                     <a
@@ -148,12 +148,12 @@
                     quickly identify areas of concern.
                 </p>
                 <p>
-                    <a href="#"><img src="https://img.shields.io/badge/python-black?logo=python" alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/jupyter-black?logo=jupyter" alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/pandas-black?logo=pandas" alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/numpy-black?logo=numpy" alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/azure-black?logo=microsoftazure" alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/powerbi-black?logo=powerbi" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/python-22212B?logo=python" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/jupyter-22212B?logo=jupyter" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/pandas-22212B?logo=pandas" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/numpy-22212B?logo=numpy" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/azure-22212B?logo=microsoftazure" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/powerbi-22212B?logo=powerbi" alt="" /></a>
                 </p>
                 <p>
                     <a href="https://github.com/lyoh001/AzureSecurityScore"><b>View Code</b></a>
@@ -168,11 +168,11 @@
                     licensing, reduced manual efforts, and provided valuable insights.
                 </p>
                 <p>
-                    <a href="#"><img src="https://img.shields.io/badge/python-black?logo=python" alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/mysql-black?logo=mysql" alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/pandas-black?logo=pandas" alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/numpy-black?logo=numpy" alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/azure-black?logo=microsoftazure" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/python-22212B?logo=python" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/mysql-22212B?logo=mysql" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/pandas-22212B?logo=pandas" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/numpy-22212B?logo=numpy" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/azure-22212B?logo=microsoftazure" alt="" /></a>
                 </p>
                 <p>
                     <a href="https://github.com/lyoh001/AzureVMAudit"><b>View Code</b></a>
