--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                         href="https://github.com/lyoh001/AzureStaticWebApps/blob/main/mlcloudaudit/notebook/notebook.ipynb"><b>View
                             Code</b></a>, <a href="https://www.lyoh001.com/mlvmaudit"><b>View Demo</b></a>
                 </p>
-                <p><img src="images/lstm.png" width="800" height="300"></p>
+                <p><img src="images/lstm.png" style="max-width: 80%; height: auto; display: block; margin: 0 auto;"></p>
             </section>
             <section>
                 <h3><b>CNN: A Machine Learning Approach for Identifying Coffee Plant Diseases</b></h3>
@@ -81,7 +81,7 @@
                         href="https://github.com/lyoh001/AzureStaticWebApps/blob/main/mlcoffeeplantdiseases/notebook/notebook.ipynb"><b>View
                             Code</b></a>, <a href="https://www.lyoh001.com/mlcoffeeplantdiseases"><b>View Demo</b></a>
                 </p>
-                <p><img src="images/cnn.png" width="800" height="300"></p>
+                <p><img src="images/cnn.png" style="max-width: 80%; height: auto; display: block; margin: 0 auto;"></p>
             </section>
             <section>
                 <h3><b>ANN (Regression): Unveiling Telecommunication Hidden Insights with Machine Learning</b></h3>
@@ -110,7 +110,7 @@
                     <a href="https://github.com/lyoh001/AzureStaticWebApps/blob/main/mltelecom/notebook/notebook.ipynb"><b>View
                             Code</b></a>, <a href="https://www.lyoh001.com/mltelecom"><b>View Demo</b></a>
                 </p>
-                <p><img src="images/ann.png" width="800" height="300"></p>
+                <p><img src="images/ann.png" style="max-width: 80%; height: auto; display: block; margin: 0 auto;"></p>
             </section>
             <section>
                 <h3><b>ANN (Classification): Machine Learning for Maternal Risk</b></h3>
@@ -136,7 +136,7 @@
                         href="https://github.com/lyoh001/AzureStaticWebApps/blob/main/mlmaternalmortality/notebook/notebook.ipynb"><b>View
                             Code</b></a>, <a href="https://www.lyoh001.com/mlmaternalmortality"><b>View Demo</b></a>
                 </p>
-                <p><img src="images/swa.png" width="800" height="220"></p>
+                <p><img src="images/swa.png" style="max-width: 80%; height: auto; display: block; margin: 0 auto;"></p>
             </section>
             <section>
                 <h3><b>ETL: An Analysis of Azure IaaS for Savings</b></h3>
@@ -156,7 +156,8 @@
                 <p>
                     <a href="https://github.com/lyoh001/AzureVMAudit"><b>View Code</b></a>
                 </p>
-                <p><img src="images/azure.png" width="800" height="686"></p>
+                <p><img src="images/azure.png" style="max-width: 80%; height: auto; display: block; margin: 0 auto;">
+                </p>
             </section>
             <section>
                 <h3><b>Power BI: Cloud Security Dashboard</b></h3>
