--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <main>
         <article id="mainRight">
             <section>
-                <h3><b>NLP: A Hate Speech Detection</b></h3>
+                <h3><b>NLP: A Speech Detection</b></h3>
                 <p>
                     Developed a hate speech detection system using NLP, which involved preprocessing using Regex, NLTK,
                     Gensim, and SpaCy. The data was aggregated and visualized using Pandas, Matplotlib, and Word Cloud
@@ -38,7 +38,7 @@
                 </p>
             </section>
             <section>
-                <h3><b>RNN (LSTM): A Key to Unlocking Cloud Cost Analysis and Optimization using Machine Learning</b>
+                <h3><b>RNN: A Key to Unlocking Cloud Cost Analysis and Optimization using Machine Learning</b>
                 </h3>
                 <p>
                     Conducted an in-depth analysis of the cloud consumption patterns by building a Power BI dashboard
@@ -84,7 +84,7 @@
                 <p><img src="images/cnn.png" style="max-width: 80%; height: auto; display: block; margin: 0 auto;"></p>
             </section>
             <section>
-                <h3><b>ANN (Regression): Unveiling Telecommunication Hidden Insights with Machine Learning</b></h3>
+                <h3><b>ANN: Unveiling Telecommunication Hidden Insights with Machine Learning</b></h3>
                 <p>
                     Participated in a Power BI competition hosted by Codebasics and have built a complete end-to-end
                     project featuring EDA, Feature Engineering, Power BI, Machine Learning Model Training, and Cloud
@@ -113,7 +113,7 @@
                 <p><img src="images/ann.png" style="max-width: 80%; height: auto; display: block; margin: 0 auto;"></p>
             </section>
             <section>
-                <h3><b>ANN (Classification): Machine Learning for Maternal Risk</b></h3>
+                <h3><b>MLOps: Machine Learning for Maternal Risk</b></h3>
                 <p>
                     Built an Artificial Neural Network classification model to identify maternal risks, incorporating
                     Exploratory Data Analysis (EDA), Feature Engineering, Power BI, Machine Learning (ML) and Deep
